--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "redux": "^4.2.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "parcel": "^2.8.3",
-    "process": "^0.11.10"
+    "postcss": "^8.4.21",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.2.7"
   }
 }
